# ds-python-boilerplate

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  README.rst  changelog.html  codecov.yml  index.html  mkdocs.yml  modules.html  my_project.hello_world.html  my_project.html  objects.inv  py-modindex.html  pyproject.toml  readme_root.html  requirements-dev.txt  requirements.txt  search.html  searchindex.js  sitemap.xml  versions.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  dependabot.yml  release-drafter-config.yml
.github/ISSUE_TEMPLATE/: bugs.md
.github/PULL_REQUEST_TEMPLATE/: bugs.md  checklist.md
.github/actions/builder/: action.yml
.github/workflows/: api-docs.yml  build.yml  codeql-analysis.yml  docstring-health.yml  quality-check.yml  release-drafter-draft.yml  release-drafter-label.yml  release-drafter.yml  test.yml
0.12/reference/SUMMARY/: index.html
0.12/reference/my_project/: index.html
0.12/see-also/: index.html
0.13/: index.html
0.13/getting-started/poetry/: index.html
0.13/search/: search_index.json
0.13/tooling/documentation/: index.html
0.13/tooling/pipelines/: index.html
0.13/tooling/testing/: index.html
0.14/: 404.html  index.html  sitemap.xml
0.14/general-python-tips/: index.html
0.14/getting-started/conda/: index.html
0.14/getting-started/dev-container/: index.html
0.14/getting-started/getting-started/: index.html
0.14/getting-started/poetry/: index.html
0.14/helpful-articles/: index.html
0.14/reference/SUMMARY/: index.html
0.14/reference/my_project/: index.html
0.14/see-also/: index.html
0.14/tooling/documentation/: index.html
0.14/tooling/pipelines/: index.html
0.14/tooling/quality/: index.html
0.14/tooling/testing/: index.html
0.15/: 404.html  index.html  objects.inv  sitemap.xml
0.15/general-python-tips/: index.html
0.15/getting-started/conda/: index.html
0.15/getting-started/dev-container/: index.html
0.15/getting-started/getting-started/: index.html
0.15/getting-started/poetry/: index.html
0.15/helpful-articles/: index.html
0.15/reference/SUMMARY/: index.html
0.15/reference/my_project/: index.html
0.15/search/: search_index.json
0.15/see-also/: index.html
0.15/tooling/documentation/: index.html
0.15/tooling/pipelines/: index.html
0.15/tooling/quality/: index.html
0.15/tooling/testing/: index.html
0.16/: 404.html  index.html  sitemap.xml
0.16/general-python-tips/: index.html
0.16/getting-started/conda/: index.html
0.16/getting-started/dev-container/: index.html
0.16/getting-started/getting-started/: index.html
0.16/getting-started/poetry/: index.html
0.16/helpful-articles/: index.html
0.16/reference/SUMMARY/: index.html
0.16/reference/my_project/: index.html
0.16/see-also/: index.html
0.16/tooling/documentation/: index.html
0.16/tooling/pipelines/: index.html
0.16/tooling/quality/: index.html
0.16/tooling/testing/: index.html
0.17/: 404.html  index.html  sitemap.xml
0.17/general-python-tips/: index.html
0.17/getting-started/conda/: index.html
0.17/getting-started/dev-container/: index.html
0.17/getting-started/getting-started/: index.html
0.17/getting-started/poetry/: index.html
0.17/helpful-articles/: index.html
0.17/reference/SUMMARY/: index.html
0.17/reference/my_project/: index.html
0.17/search/: search_index.json
0.17/see-also/: index.html
0.17/tooling/documentation/: index.html
0.17/tooling/pipelines/: index.html
0.17/tooling/quality/: index.html
0.18/: 404.html  index.html  sitemap.xml
0.18/general-python-tips/: index.html
0.18/helpful-articles/: index.html
0.18/search/: search_index.json
0.18/see-also/: index.html
0.19/: 404.html  index.html  sitemap.xml
0.19/general-python-tips/: index.html
0.19/helpful-articles/: index.html
0.19/search/: search_index.json
0.19/see-also/: index.html
0.20/: 404.html  index.html  sitemap.xml
0.20/general-python-tips/: index.html
0.20/helpful-articles/: index.html
0.20/search/: search_index.json
0.20/see-also/: index.html
0.21/: 404.html  index.html  sitemap.xml
0.21/general-python-tips/: index.html
0.21/helpful-articles/: index.html
0.21/search/: search_index.json
0.21/see-also/: index.html
0.22/: 404.html  index.html  sitemap.xml
0.22/general-python-tips/: index.html
0.22/helpful-articles/: index.html
0.22/see-also/: index.html
0.23/: 404.html  index.html  sitemap.xml
0.23/helpful-articles/: index.html
0.23/search/: search_index.json
0.24/: index.html
0.24/general-python-tips/: index.html
0.24/search/: search_index.json
0.24/see-also/: index.html
_modules/: index.html
_modules/my_project/: hello_world.html
_source/: modules.rst  my_project.rst
_sources/: changelog.rst.txt  modules.rst.txt  my_project.hello_world.rst.txt
changelog/: index.html
docs/: documentation.md  gen_ref_pages.py  general-python-tips.md  getting-started.md  helpful-articles.md  linting-formatting.md  pipelines.md  see-also.md  testing.md
docs/_source/: conf.py  index.rst
docs/getting-started/: conda.md  dev-container.md  getting-started.md  poetry.md  uv.md
docs/my_project/: hello_world.md
docs/tooling/: documentation.md  linting-formatting.md  pipelines.md  quality.md  testing.md
documentation/: index.html
general-python-tips/: index.html
getting-started/: index.html
getting-started/conda/: index.html
getting-started/dev-container/: index.html
getting-started/getting-started/: index.html
getting-started/poetry/: index.html
helpful-articles/: index.html
linting-formatting/: index.html
my_project/: __init__.py  hello_world.py
my_project/hello_world/: index.html
pipelines/: index.html
pycharm/: watchers.xml
reference/SUMMARY/: index.html
reference/my_project/: index.html
scripts/: check-docstrings.sh  lint-code.sh  resolve-dirs.sh  type-check-code.sh  unit-test-code.sh
search/: search_index.json
src/my_project/: hello_world.py
testing/: index.html
tests/: test_hello_world.py
tooling/pipelines/: index.html
tooling/quality/: index.html
(+60 files in other folders)
