[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "my_project"
version = "0.10.2"
description = "Boilerplate for data science projects in Python"
authors = ["Eshwen Bhal, PhD <milanman.eshb@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"

# Terminal colours
colorama = "*"

# Data processing
pandas = { version = "^2.1.3", extras = ["performance", "visualisation", "computation", "excel", "sql-other"] }

# Machine learning
#tensorflow-macos = "*"
scikit-learn = "*"

# Data validation
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
pandera = "^0.18.3"

# SQL databases
SQLAlchemy = "^2.0.0"

# APIs
fastapi = "^0.110.0"
uvicorn = "*"
requests = "^2.32.3"

# Stats
statsmodels = "*"

# Visualisation
matplotlib = "*"
seaborn = "*"
plotly = "*"

# Configs
PyYAML = "*"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
ruff = "^0.4.5"

# Type hinting
mypy = "^1.8.0"
pandera = { version = "*", extras = ["mypy"] }

# Jupyter notebooks
jupyter = "*"
jupyterlab = "*"
voila = "*"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "*"
pytest-mock = "*"
pytest-cov = "*"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.0"
pymdown-extensions = "^10.8"
mkdocs-material = "^9.5.16"
mkdocstrings = { version = "^0.24.1", extras = ["python"] }
mkgendocs = "^0.9.2"
termynal = "^0.11.0"
mkdocs-gen-files = "^0.5.0"
mkdocs-literate-nav = "^0.6.1"
mkdocs-section-index = "^0.3.8"
mike = "^2.0.0"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

plugins = [
    'pandera.mypy',
    'pydantic.mypy'
]

[tool.ruff]
target-version = "py310"
line-length = 120

extend-exclude = [
    ".venv",
]

[tool.ruff.lint]
select = [
    "D",
    "E",
    "F",
    "I",
    "N",
    "W",
    "ARG",
    "ICN",
    "PD",
    "PL",
    "PTH",
    "NPY",
    "RUF",
    "UP"
]

ignore = [
    "ARG001", # ARG001 complains when a function has an unused argument
    "ARG002", # ARG002 complains when a method has an unused argument
    'D301', # D301 complains when a docstring has a backslash and isn't a raw string
    'D107', # D107 complains when there is no docstring in an __init__ method
    "F401", # F401 complains when an import is unused in an __init__ file
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "D104", # D104 complains when there is no docstring in a module
]
"tests/*" = [
    "D100", # D100 complains when there is no docstring in a module
    "D103", # D103 complains when there is no docstring in a function
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
# Like Black
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-v",
    "-s",
    "--cov"
]
testpaths = [
    "tests",
]
asyncio_mode = "auto"


[tool.coverage.run]
branch = true
source = ["my_project"]
omit = [
    "__init__.py"
]

[tool.coverage.report]
show_missing = true
fail_under = 90
