[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "my_project"
version = "0.10.2"
description = "Boilerplate for data science projects in Python"
authors = [
    { name = "Eshwen Bhal, PhD", email = "milanman.eshb@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies"]

[tool.poetry]
requires-poetry = ">=2.0"

[tool.poetry.dependencies]
# Terminal colours
colorama = "*"

# Data processing
pandas = { version = "^2.3.3", extras = ["performance", "visualisation", "computation", "excel", "sql-other"] }
polars = "^1.33.0"

# Machine learning
#tensorflow-macos = "*"
scikit-learn = "*"

# Data validation
pydantic = "^2.12.5"
pydantic-settings = "^2.12.0"
pandera = ">=0.18.3, <1"

# SQL databases
SQLAlchemy = "^2.0.46"

# APIs
fastapi = ">=0.110.0, <1"
uvicorn = "*"
requests = "^2.32.5"

# Stats
statsmodels = "*"

# Visualisation
matplotlib = "*"
seaborn = "*"
plotly = "*"

# Configs
PyYAML = "*"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.5.0"
ruff = "^0.14.14"

# Type hinting
mypy = "^1.8.0"
pandera = { version = "*", extras = ["mypy"] }

# Jupyter notebooks
jupyter = "*"
jupyterlab = "*"
voila = "*"

[tool.poetry.group.test.dependencies]
pytest = "^8.4.2"
pytest-asyncio = "*"
pytest-mock = "*"
pytest-cov = "*"

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.7.1"
mkdocstrings = { version = "^1.0.0", extras = ["python"] }
termynal = "^0.13.1"
mkdocs-api-autonav = "^0.4.0"
mkdocs-section-index = "^0.3.8"
mike = "^2.0.0"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

plugins = [
    'pandera.mypy',
    'pydantic.mypy'
]

[tool.ruff]
target-version = "py310"
line-length = 120

extend-exclude = [
    ".venv",
]

[tool.ruff.lint]
select = [
    "D",
    "E",
    "F",
    "I",
    "N",
    "W",
    "ARG",
    "ICN",
    "PD",
    "PL",
    "PTH",
    "NPY",
    "RUF",
    "UP"
]

ignore = [
    "ARG001", # ARG001 complains when a function has an unused argument
    "ARG002", # ARG002 complains when a method has an unused argument
    'D301', # D301 complains when a docstring has a backslash and isn't a raw string
    'D107', # D107 complains when there is no docstring in an __init__ method
    "F401", # F401 complains when an import is unused in an __init__ file
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "D104", # D104 complains when there is no docstring in a module
]
"tests/*" = [
    "D100", # D100 complains when there is no docstring in a module
    "D103", # D103 complains when there is no docstring in a function
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
# Like Black
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-v",
    "-s",
    "--cov"
]
testpaths = [
    "tests",
]
asyncio_mode = "auto"


[tool.coverage.run]
branch = true
source = ["my_project"]
omit = [
    "__init__.py"
]

[tool.coverage.report]
show_missing = true
fail_under = 90
