[build-system]
requires = ["uv_build>=0.11.0,<0.12"]
build-backend = "uv_build"


[project]
name = "my_project"
version = "0.10.2"
description = "Boilerplate for data science projects in Python"
authors = [
    { name = "Eshwen Bhal, PhD", email = "milanman.eshb@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Terminal colours
    "colorama",
    # Data processing
    "pandas[performance,plot,computation,excel,sql-other]>=2.3.3,<3",
    "polars>=1.40.1,<2",
    # Machine learning
    #"tensorflow-macos",
    "scikit-learn",
    # Data validation
    "pydantic>=2.13.3,<3",
    "pydantic-settings>=2.14.2,<3",
    "pandera>=0.31.1,<1",
    # SQL databases
    "sqlalchemy>=2.0.49,<3",
    # APIs
    "fastapi>=0.136.1,<1",
    "uvicorn",
    "requests>=2.33.0,<3",
    # Stats
    "statsmodels",
    # Visualisation
    "matplotlib",
    "seaborn",
    "plotly",
    # Configs
    "pyyaml",
]


[dependency-groups]
dev = [
    { include-group = "lint" },
    { include-group = "type" },
    { include-group = "test" },
    { include-group = "jupyter" },
]
lint = [
    "pre-commit>=4.6.0,<5",
    "ruff>=0.15.15,<0.16",
]
type = [
    "mypy>=2.0.0,<3",
    "pandas-stubs>=2.3.3",
    "pandera[mypy]",
]
test = [
    "pytest>=9.0.3,<10",
    "pytest-asyncio",
    "pytest-mock",
    "pytest-cov",
]
jupyter = [
    "jupyter",
    "jupyterlab",
    "voila",
]
docs = [
    "mkdocs-material>=9.7.6,<10",
    "mkdocstrings[python]>=1.0.4,<2",
    "termynal>=0.14.0,<0.15",
    "mkdocs-api-autonav>=0.4.0,<0.5",
    "mkdocs-section-index>=0.3.12,<0.4",
    "mike>=2.2.0,<3",
]


[tool.uv]
required-version = ">=0.11.0,<0.12"


[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

plugins = [
    'pandera.mypy',
    'pydantic.mypy'
]


[tool.ruff]
target-version = "py310"
line-length = 120

extend-exclude = [
    ".venv",
]


[tool.ruff.lint]
select = [
    "D",
    "E",
    "F",
    "I",
    "N",
    "W",
    "ARG",
    "ICN",
    "PD",
    "PL",
    "PTH",
    "NPY",
    "RUF",
    "UP"
]

ignore = [
    "ARG001", # ARG001 complains when a function has an unused argument
    "ARG002", # ARG002 complains when a method has an unused argument
    'D301', # D301 complains when a docstring has a backslash and isn't a raw string
    'D107', # D107 complains when there is no docstring in an __init__ method
    "F401", # F401 complains when an import is unused in an __init__ file
]


[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "D104", # D104 complains when there is no docstring in a module
]
"tests/*" = [
    "D100", # D100 complains when there is no docstring in a module
    "D103", # D103 complains when there is no docstring in a function
]


[tool.ruff.lint.pydocstyle]
convention = "google"


[tool.ruff.format]
# Like Black
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"


[tool.pytest]
minversion = "9.0"
addopts = [
    "-v",
    "-s",
    "--cov"
]
testpaths = [
    "tests",
]
asyncio_mode = "auto"


[tool.coverage.run]
branch = true
source = ["my_project"]
omit = [
    "__init__.py"
]


[tool.coverage.report]
show_missing = true
fail_under = 90
